# una-h-challenge

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: deploy.yml
src/: config.py
src/models/: models.py  parser_schema.py
src/utils/: parser.py
