[tool.poetry]
name = "turbit-2-backend"
version = "0.1.0"
description = ""
authors = ["OmerBilgin21 <omrfrkblgn21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
black = "^24.4.2"
ruff = "^0.5.1"
pydantic = "^2.8.2"
pymongo = "^4.8.0"
python-dotenv = "^1.0.1"
pathlib = "^1.0.1"
pandas = "^2.2.2"
bson = "^0.5.10"
motor = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
exclude = [".git", ".ruff_cache", ".venv"]
target-version = "py310"

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    "B008",
    "UP032",
    "D100",
    "D206",
    "D400",
    "D401",
    "D406",
    "D413",
    "D104",
    "D415",
    "D407",
    "G001",
    "D203",
    "D212",
    "D203",
    "D213",
    "FIX004",
    "TD003",  
    "PLR0913",
    "D101",   
    "N815",   
    "S104",   
    "W191",
]

fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"

indent-style = "tab"

skip-magic-trailing-comma = false

line-ending = "auto"
